# microsearch

./: README.md  pyproject.toml
app/: app.py
app/templates/: index.html
notebooks/: tutorial.ipynb
src/microsearch/: __init__.py
