[project]
name = "microsearch"
version = "0.1.0"
description = "High-level (and possibly very slow) search over PostgreSQL + pgvector. Good for PoCs and prototypes."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Juraj Onuska", email = "jurajonuska@gmail.com" }]
dependencies = [
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.8",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "ollama>=0.4.7",
    "ruff>=0.9.6",
    "uvicorn[standard]>=0.34.0",
]


[tool.ruff]
line-length = 100
target-version = "py312"
